fix: popup image thumbnails are served too small

--- a/modules/ve/css/components/Skeletons.less
+++ b/modules/ve/css/components/Skeletons.less
@@ -10,10 +10,10 @@
     &.ext-datamaps-popup-title {
         width: 40%;
     }
-}
 
-.ext-datamaps-popup-image.ext-datamaps-ve-load-rect {
-    height: 117px;
+    &.ext-datamaps-popup-image {
+        height: 135px;
+    }
 }
 
 @keyframes ext-datamaps-ve-skeleton {
